Fixed PharmaceuticalStockWard with quantities from other wards

--- a/rpt/PharmaceuticalStockWard.jrxml
+++ b/rpt/PharmaceuticalStockWard.jrxml
@@ -40,7 +40,7 @@
 	<parameter name="WardCode" isForPrompting="true" class="java.lang.String"/>
 	<parameter name="DateReport" isForPrompting="false" class="java.lang.String"/>
 	<queryString><![CDATA[SELECT MDSR_ID, MDSRT_DESC, MDSR_CODE, MDSR_DESC,
-	QTI_IN - QTI_OUT AS STOCK,
+	QTI_IN + QTI_FROM_WARD - QTI_OUT AS STOCK,
     (QTI_IN - QTI_OUT) * AVG_COST AS VALUE_AVG,
     (QTI_IN - QTI_OUT) * WEIGHT_AVG_COST AS VALUE_WG,
     (QTI_IN - QTI_OUT) * LAST_COST AS VALUE_LAST,
@@ -51,46 +51,55 @@ FROM
 SELECT MDSR_ID, MDSRT_DESC, MDSR_CODE, MDSR_DESC,
 
 	COALESCE((SELECT SUM(MMV_QTY)
-		FROM medicaldsrstockmov
-        LEFT JOIN medicaldsrstockmovtype ON MMV_MMVT_ID_A = MMVT_ID_A
-		WHERE MMVT_TYPE = '-'
+		FROM MEDICALDSRSTOCKMOV
+        LEFT JOIN MEDICALDSRSTOCKMOVTYPE ON MMV_MMVT_ID_A = MMVT_ID_A
+		WHERE MMVT_TYPE SOUNDS LIKE '-'
 		AND DATE(MMV_DATE) <= $P{Date}
 		AND MMV_WRD_ID_A = $P{WardCode}
 		AND MMV_MDSR_ID = MDSRWRD_MDSR_ID
 		GROUP BY MMV_MDSR_ID), 0) AS QTI_IN,
-  
-	COALESCE((SELECT SUM(MMVN_MDSR_QTY)
-		FROM medicaldsrstockmovward
-		WHERE DATE(MMVN_DATE) <= $P{Date}
+		
+	COALESCE((SELECT SUM(-1 * MMVN_MDSR_QTY)
+		FROM MEDICALDSRSTOCKMOVWARD
+		WHERE MMVN_WRD_ID_A_FROM IS NOT NULL
+		AND DATE(MMVN_DATE) <= $P{Date}
 		AND MMVN_WRD_ID_A = $P{WardCode}
 		AND MMVN_MDSR_ID = MDSRWRD_MDSR_ID
-		GROUP BY MDSR_ID), 0) AS QTI_OUT,
+		GROUP BY MMVN_MDSR_ID), 0) AS QTI_FROM_WARD,
+  
+	COALESCE((SELECT SUM(MMVN_MDSR_QTY)
+		FROM MEDICALDSRSTOCKMOVWARD
+		WHERE DATE(MMVN_DATE) <= $P{Date}
+		AND MMVN_WRD_ID_A_FROM IS NULL
+		AND MMVN_WRD_ID_A = $P{WardCode}
+		AND MMVN_MDSR_ID = MDSRWRD_MDSR_ID
+		GROUP BY MMVN_MDSR_ID), 0) AS QTI_OUT,
     
     (SELECT AVG(LT_COST) 
-		FROM medicaldsrstockmov
-		LEFT JOIN medicaldsrlot ON MMV_LT_ID_A = LT_ID_A
-        LEFT JOIN medicaldsrstockmovtype ON MMV_MMVT_ID_A = MMVT_ID_A
-		WHERE MMVT_TYPE = '-'
+		FROM MEDICALDSRSTOCKMOV
+		LEFT JOIN MEDICALDSRLOT ON MMV_LT_ID_A = LT_ID_A
+        LEFT JOIN MEDICALDSRSTOCKMOVTYPE ON MMV_MMVT_ID_A = MMVT_ID_A
+		WHERE MMVT_TYPE SOUNDS LIKE '-'
         AND DATE(MMV_DATE) <= $P{Date}
         AND MMV_WRD_ID_A = $P{WardCode}
         AND MMV_MDSR_ID = MDSRWRD_MDSR_ID
 		GROUP BY MMV_MDSR_ID) AS AVG_COST,
         
 	(SELECT SUM(MMV_QTY * LT_COST) / SUM(MMV_QTY)
-		FROM medicaldsrstockmov
-		LEFT JOIN medicaldsrlot ON MMV_LT_ID_A = LT_ID_A
-        LEFT JOIN medicaldsrstockmovtype ON MMV_MMVT_ID_A = MMVT_ID_A
-		WHERE MMVT_TYPE = '-'
+		FROM MEDICALDSRSTOCKMOV
+		LEFT JOIN MEDICALDSRLOT ON MMV_LT_ID_A = LT_ID_A
+        LEFT JOIN MEDICALDSRSTOCKMOVTYPE ON MMV_MMVT_ID_A = MMVT_ID_A
+		WHERE MMVT_TYPE SOUNDS LIKE '-'
         AND DATE(MMV_DATE) <= $P{Date}
         AND MMV_WRD_ID_A = $P{WardCode}
         AND MMV_MDSR_ID = MDSRWRD_MDSR_ID
 		GROUP BY MMV_MDSR_ID) AS WEIGHT_AVG_COST,
         
 	(SELECT LT_COST
-        FROM medicaldsrstockmov
-		LEFT JOIN medicaldsrlot ON MMV_LT_ID_A = LT_ID_A
-        LEFT JOIN medicaldsrstockmovtype ON MMV_MMVT_ID_A = MMVT_ID_A
-        WHERE MMVT_TYPE = '-'
+        FROM MEDICALDSRSTOCKMOV
+		LEFT JOIN MEDICALDSRLOT ON MMV_LT_ID_A = LT_ID_A
+        LEFT JOIN MEDICALDSRSTOCKMOVTYPE ON MMV_MMVT_ID_A = MMVT_ID_A
+        WHERE MMVT_TYPE SOUNDS LIKE '-'
         AND DATE(MMV_DATE) <= $P{Date}
         AND MMV_MDSR_ID = MDSRWRD_MDSR_ID
         GROUP BY MMV_MDSR_ID
@@ -98,20 +107,20 @@ SELECT MDSR_ID, MDSRT_DESC, MDSR_CODE, MDSR_DESC,
         LIMIT 1) AS LAST_COST,
         
 	(SELECT MIN(LT_COST)
-        FROM medicaldsrstockmov
-		LEFT JOIN medicaldsrlot ON MMV_LT_ID_A = LT_ID_A
-        LEFT JOIN medicaldsrstockmovtype ON MMV_MMVT_ID_A = MMVT_ID_A
-        WHERE MMVT_TYPE = '-'
+        FROM MEDICALDSRSTOCKMOV
+		LEFT JOIN MEDICALDSRLOT ON MMV_LT_ID_A = LT_ID_A
+        LEFT JOIN MEDICALDSRSTOCKMOVTYPE ON MMV_MMVT_ID_A = MMVT_ID_A
+        WHERE MMVT_TYPE SOUNDS LIKE '-'
         AND DATE(MMV_DATE) <= $P{Date}
         AND MMV_MDSR_ID = MDSRWRD_MDSR_ID
         GROUP BY MMV_MDSR_ID
         LIMIT 1) AS MIN_COST,
         
 	(SELECT MAX(LT_COST)
-        FROM medicaldsrstockmov
-		LEFT JOIN medicaldsrlot ON MMV_LT_ID_A = LT_ID_A
-        LEFT JOIN medicaldsrstockmovtype ON MMV_MMVT_ID_A = MMVT_ID_A
-        WHERE MMVT_TYPE = '-'
+        FROM MEDICALDSRSTOCKMOV
+		LEFT JOIN MEDICALDSRLOT ON MMV_LT_ID_A = LT_ID_A
+        LEFT JOIN MEDICALDSRSTOCKMOVTYPE ON MMV_MMVT_ID_A = MMVT_ID_A
+        WHERE MMVT_TYPE SOUNDS LIKE '-'
         AND DATE(MMV_DATE) <= $P{Date}
         AND MMV_MDSR_ID = MDSRWRD_MDSR_ID
         GROUP BY MMV_MDSR_ID
@@ -119,7 +128,7 @@ SELECT MDSR_ID, MDSRT_DESC, MDSR_CODE, MDSR_DESC,
         
 FROM MEDICALDSRWARD
 LEFT JOIN MEDICALDSR ON MDSR_ID = MDSRWRD_MDSR_ID
-LEFT JOIN medicaldsrtype ON MDSR_MDSRT_ID_A = MDSRT_ID_A
+LEFT JOIN MEDICALDSRTYPE ON MDSR_MDSRT_ID_A = MDSRT_ID_A
 WHERE MDSRWRD_WRD_ID_A = $P{WardCode}
 GROUP BY MDSRT_DESC, MDSR_ID
 ORDER BY MDSRT_DESC, MDSR_DESC
