--- a/rpt/ProductLedgerWard.jrxml
+++ b/rpt/ProductLedgerWard.jrxml
@@ -75,7 +75,7 @@
 		"Opening Balance" AS REASON,
 		(SELECT SUM(MMV_QTY)
 			FROM MEDICALDSRSTOCKMOV
-			LEFT JOIN MEDICALDSRSTOCKMOVtype ON MMV_MMVT_ID_A = MMVT_ID_A
+			LEFT JOIN MEDICALDSRSTOCKMOVTYPE ON MMV_MMVT_ID_A = MMVT_ID_A
 			WHERE MMVT_TYPE LIKE '%-%'
 			AND DATE(MMV_DATE) < $P{fromdate}
 			AND MMV_WRD_ID_A = $P{WardCode}
@@ -84,7 +84,7 @@
 		SUM(MMVN_MDSR_QTY) AS OUT_QTY,
 		(SELECT AVG(LT_COST)
 			FROM MEDICALDSRSTOCKMOV
-			LEFT JOIN MEDICALDSRSTOCKMOVtype ON MMV_MMVT_ID_A = MMVT_ID_A
+			LEFT JOIN MEDICALDSRSTOCKMOVTYPE ON MMV_MMVT_ID_A = MMVT_ID_A
 			LEFT JOIN MEDICALDSRlot ON MMV_LT_ID_A = LT_ID_A
 			WHERE MMVT_TYPE LIKE '%-%'
 			AND DATE(MMV_DATE) < $P{fromdate}
@@ -128,16 +128,10 @@ SELECT "2" AS ORDERING_FIELD,
 				MMVN_IS_PATIENT AS IS_PATIENT,
 				IF (MMVN_IS_PATIENT = 1 AND MMVN_MDSR_QTY < 0, "Return", -- Return by Patients
 					IF(MMVN_IS_PATIENT = 1 AND MMVN_MDSR_QTY > 0, "Patient",  -- Discharge to Patient
-						IF(MMVN_WRD_ID_A_TO IS NOT NULL, "To Ward", -- Movement to another ward 
-							IF(MMVN_WRD_ID_A_FROM IS NOT NULL, "From Ward", -- Movement from another ward 
-								"Rectify")))) AS MOV_TYPE, -- Rectify / Inventory
+						"Rectify")) AS MOV_TYPE, -- Rectify / Inventory
 				IF (MMVN_IS_PATIENT = 1 AND MMVN_MDSR_QTY < 0, "Return by Patient", -- Return
 					IF(MMVN_IS_PATIENT = 1 AND MMVN_MDSR_QTY > 0, "Discharge to Patient",  -- Patient
-						IF(MMVN_WRD_ID_A_TO IS NOT NULL, 
-						CONCAT("To WARD: ", (SELECT WRD_NAME FROM WARD WHERE WRD_ID_A = MMVN_WRD_ID_A_TO)), -- Movement to another ward 
-							IF(MMVN_WRD_ID_A_FROM IS NOT NULL, 
-							CONCAT("From WARD: ", (SELECT WRD_NAME FROM WARD WHERE WRD_ID_A = MMVN_WRD_ID_A_FROM)), -- Movement from another ward 
-								"Rectify / Inventory")))) AS REASON, -- Rectify
+						"Rectify / Inventory")) AS REASON, -- Rectify
 				IF (MMVN_MDSR_QTY < 0, -MMVN_MDSR_QTY, 0) AS IN_QTY,
 				IF (MMVN_MDSR_QTY > 0, MMVN_MDSR_QTY, 0) AS OUT_QTY,
 				null AS COST
@@ -174,7 +168,7 @@ SELECT "2" AS ORDERING_FIELD,
 					LEFT JOIN
 				MEDICALDSR ON MMV_MDSR_ID = MDSR_ID
 					LEFT JOIN
-				MEDICALDSRSTOCKMOVtype ON MMV_MMVT_ID_A = MMVT_ID_A
+				MEDICALDSRSTOCKMOVTYPE ON MMV_MMVT_ID_A = MMVT_ID_A
 					LEFT JOIN 
 				MEDICALDSRlot ON MMV_LT_ID_A = LT_ID_A
 				
@@ -202,7 +196,7 @@ SELECT 	"3" AS ORDERING_FIELD,
 		"Closing Balance" AS REASON,
 		(SELECT SUM(MMV_QTY)
 			FROM MEDICALDSRSTOCKMOV
-			LEFT JOIN MEDICALDSRSTOCKMOVtype ON MMV_MMVT_ID_A = MMVT_ID_A
+			LEFT JOIN MEDICALDSRSTOCKMOVTYPE ON MMV_MMVT_ID_A = MMVT_ID_A
 			WHERE MMVT_TYPE LIKE '%-%'
 			AND DATE(MMV_DATE) <= $P{todate}
 			AND MMV_WRD_ID_A = $P{WardCode}
